chore: ajustes e testes miscelâneros de recursos locais